<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="@drawable/bg"
    tools:context="com.freeze.ucsy.kidsedu.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_alphabets"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_alphabets" />

        <Button
            android:id="@+id/btn_numeric"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_numeric" />

        <Button
            android:id="@+id/btn_flower"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_flowers" />

        <Button
            android:id="@+id/btn_fruits"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_fruits" />

        <Button
            android:id="@+id/btn_animal"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_animals" />
    </LinearLayout>
</RelativeLayout>
